--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-
+@import url(./slides.css);
 
 *{
     margin: 0;
@@ -37,7 +37,7 @@ nav{
 
     width: 100%;
     height: 60px;
-    box-shadow: 8px 10px gray;
+   box-shadow: 8px 10px gray;
 }
 
 i{
@@ -184,6 +184,16 @@ i{
     font-size: var(--md);
     color: #000000;
 }
+
+/*----------------------------------------------------*/
+
+
+
+
+
+
+
+
 
 @media (max-width: 640px){
 
