--- a/slides.css
+++ b/slides.css
@@ -61,12 +61,19 @@ img {
 
 /* Dots */
 
+.dot-container{
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
 .dot {
     cursor: pointer;
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: var(--blanquito);
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
