--- a/style.css
+++ b/style.css
@@ -22,14 +22,6 @@ body{
     background-color: var(--text-input-field);
 }
 
-.inactive{
-    display: none;
-}
-
-.nav-right .inactive{
-    display: none;
-}
-
 nav{
     background-color: #000000;
     display: flex;
@@ -37,11 +29,23 @@ nav{
 
     width: 100%;
     height: 60px;
-   box-shadow: 8px 10px gray;
+    box-shadow: 8px 10px gray;
 }
 
 i{
     color: var(--blanquito);
+}
+
+span{
+    color: var(--turquesa);
+}
+
+.inactive{
+    display: none;
+}
+
+.nav-right .inactive{
+    display: none;
 }
 
 .inactive{
@@ -80,8 +84,9 @@ i{
     font-size: 15px;
     letter-spacing: 2px;
 }
-.nav-left .logo p span:nth-child(1),
-.nav-left .logo p span:nth-child(2){
+.nav-left .logo p > span:nth-child(1),
+.nav-left .logo p > span:nth-child(2){
+    color: var(--blanquito);
     font-size: 25px;
 }
 
@@ -119,10 +124,10 @@ i{
 .nav-right ul li a{
     color:var(--blanquito);
     text-decoration: none;
-    font-weight: bold;
-
     font-size: var(--md);
+    transition: 0.6s;
 }
+
 .nav-right ul li a:hover{
     color: var(--very-light-gray);
 }
@@ -135,6 +140,8 @@ i{
     border-radius: 4px;
     letter-spacing: 1px;
     font-weight: lighter;
+
+    transition: 0.4s;
 }
 
 .nav-right ul li:nth-child(4) a:hover{
@@ -144,7 +151,7 @@ i{
 /* Mobile-menu */
 
 .nav-right .mobile-menu{
-    transition: .9s;
+    transition: .9s ease;
 }
 
 .nav-right .mobile-menu ul{
