--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url(./slides.css);
+@import url(./section.css);
 
 *{
     margin: 0;
@@ -72,6 +73,7 @@ span{
     justify-content: space-around;
     margin: 15px;
     width: 230px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .nav-left .logo img:nth-child(1){
@@ -139,7 +141,7 @@ span{
 
     border-radius: 4px;
     letter-spacing: 1px;
-    font-weight: lighter;
+    font-weight: normal;
 
     transition: 0.4s;
 }
